RESOLVED FIXED306417
Take a process assertion on the destination process when sending a sync IPC to it
https://bugs.webkit.org/show_bug.cgi?id=306417
Summary Take a process assertion on the destination process when sending a sync IPC t...
Chris Dumez
Reported 2026-01-28 01:49:06 PST
Take a process assertion on the destination process when sending a sync IPC to it, similarly to what we already do when calling `sendWithAsyncReply()`. Similarly as `sendWithAsyncReply()`, we're expecting a response from the destination process. Also, if the destination process is suspended, the sender will actually hang.
Attachments
Chris Dumez
Comment 1 2026-01-28 01:49:17 PST
Chris Dumez
Comment 2 2026-01-28 01:50:48 PST
EWS
Comment 3 2026-01-31 17:40:17 PST
Committed 306586@main (b2191c46ed4e): <https://commits.webkit.org/306586@main> Reviewed commits have been landed. Closing PR #57398 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.