Take a process assertion on the destination process when sending a sync IPC to it https://bugs.webkit.org/show_bug.cgi?id=306417 rdar://168622072

Reviewed by Per Arne Vollan.

Take a process assertion on the destination process when sending a sync
IPC to it, similarly to what we already do when calling
`sendWithAsyncReply()`. Similarly as `sendWithAsyncReply()`, we're
expecting a response from the destination process. Also, if the
destination process is suspended, the sender will actually hang.

* Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
(WebKit::AuxiliaryProcessProxy::sendSync):

Canonical link: https://commits.webkit.org/306586@main